# Cpp-High-Performance-Second-Edition

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt  abstractions.cpp  heap_allocations.cpp  references.cpp  value_semantics.cpp
Chapter02/: CMakeLists.txt  auto.cpp  exception_safety.cpp  lambda.cpp  lambda_capture.cpp  lambda_generic.cpp  lambda_std_function.cpp  lambda_types.cpp  move_semantics.cpp  propagate_const.cpp
Chapter02/benchmarks/: CMakeLists.txt  lambda_vs_stdfunction_benchmark.cpp
Chapter03/: CMakeLists.txt  binary_search.cpp  insertion_sort.cpp  linear_search.cpp  linear_search_point.cpp  scoped_timer.cpp
Chapter03/benchmarks/: CMakeLists.txt  complexity.cpp
Chapter04/: CMakeLists.txt  cache_thrashing.cpp  parallel_arrays.cpp  priority_queues.cpp  scoped_timer.h  sum_scores.cpp
Chapter05/: CMakeLists.txt  contains_duplicates.cpp  everyday_problems.cpp  generic_algorithms.cpp  grid.cpp  sorting.cpp  standard_algorithm_features.cpp
Chapter05/benchmarks/: CMakeLists.txt  find_bm.cpp  sorting_bm.cpp
Chapter06/: CMakeLists.txt  materialize_views.cpp  range_views.cpp  span.cpp  string_view.cpp  student.cpp  to_vector.h  understanding_views.cpp
Chapter07/: CMakeLists.txt  alignment.cpp  arena.h  operator_new.cpp  padding.cpp  placement_new.cpp  polymorphic_memory_allocators.cpp  raii_connection.cpp  short_alloc.cpp  stack_memory.cpp  stack_size.cpp  user_arena.cpp
Chapter08/: CMakeLists.txt  abbreviated_function_templates.cpp  compile_time_hash.cpp  constexpr_if_animals.cpp  constexpr_if_mod.cpp  constraints_and_concepts.cpp  integer_as_template_parameter.cpp  point2d_concepts.cpp  point2d_unconstrained.cpp  runtime_polymorphism_animals.cpp  safe_cast.cpp  static_assert.cpp  template_class.cpp  template_function.cpp  type_traits.cpp
Chapter09/: CMakeLists.txt  any.cpp  example_projections.cpp  example_reflection.cpp  example_reflection.h  example_reflection_concepts.cpp  heterogenous_container_of_variants.cpp  optional.cpp  pair.cpp  tuple.cpp  tuple_accessing_elements.cpp  tuple_algorithms.cpp  variadic_template_parameter_pack.cpp  variant.cpp
Chapter10/: CMakeLists.txt  pipe_operator.cpp  string_concat_proxy.h  string_concat_proxy_tests.cpp  vec2d_length_proxy.h  vec2d_length_proxy_tests.cpp
Chapter10/benchmarks/: CMakeLists.txt  string_concat_proxy_bm.cpp  vec2d_length_proxy_bm.cpp
Chapter11/: CMakeLists.txt  async.cpp  atomic_references.cpp  atomics.cpp  avoid_deadlock.cpp  barriers.cpp  condition_variables.cpp  counter_atomic.cpp  counter_data_race.cpp  counter_mutex.cpp  future_and_promises.cpp  joinable_thread.cpp  latches.cpp  lock_free_queue.cpp  print_thread_id.cpp  semaphores.cpp  stop_token.cpp  tasks.cpp
Chapter12/: CMakeLists.txt  chapter_12.h  dangling_references.cpp  generator.h  generator_example.cpp  index_compression_example.cpp  initial_example.cpp  lin_space_callback.cpp  lin_space_coroutine.cpp  lin_space_eager.cpp  lin_space_iterator.cpp  lin_space_ranges.cpp  lin_value.h  passing_coroutines_around.cpp  resumable.h  resumable_minimal_example.cpp
Chapter13/: CMakeLists.txt  asio_server.cpp  asio_timer_callback.cpp  asio_timer_coro.cpp  chapter_13.h  sync_wait.h  task.h  task_ex.cpp
Chapter14/: CMakeLists.txt  copy_if.h  copy_if_tests.cpp  count_if.cpp  index_based_loop.cpp  parallel_policy.cpp  reduce_foreach.cpp  transform.h  transform_tests.cpp
Chapter14/benchmarks/: CMakeLists.txt  copy_if_bm.cpp  transform_divide_and_conquer_bm.cpp  transform_naive_bm.cpp
